--- a/ImageMap4/ImportWindow.xaml
+++ b/ImageMap4/ImportWindow.xaml
@@ -11,10 +11,33 @@
         Height="640"
         Width="500"
         FontSize="16"
-        Closing="Window_Closing">
+        WindowStartupLocation="CenterOwner">
     <Window.DataContext>
         <local:ImportViewModel />
     </Window.DataContext>
+    <Window.InputBindings>
+        <KeyBinding Key="Delete"
+                    Command="{Binding DiscardCommand}" />
+        <KeyBinding Key="Return"
+                    Command="{Binding ConfirmCommand}" />
+        <KeyBinding Key="Esc"
+                    Command="{Binding DiscardAllCommand}" />
+        <KeyBinding Modifiers="Shift"
+                    Key="Return"
+                    Command="{Binding ConfirmAllCommand}" />
+        <KeyBinding Key="Left"
+                    Command="{Binding NavigateCommand}">
+            <KeyBinding.CommandParameter>
+                <sys:Int32>-1</sys:Int32>
+            </KeyBinding.CommandParameter>
+        </KeyBinding>
+        <KeyBinding Key="Right"
+                    Command="{Binding NavigateCommand}">
+            <KeyBinding.CommandParameter>
+                <sys:Int32>1</sys:Int32>
+            </KeyBinding.CommandParameter>
+        </KeyBinding>
+    </Window.InputBindings>
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -27,15 +50,8 @@
                 <Setter Property="Visibility"
                         Value="Collapsed" />
                 <Style.Triggers>
-                    <DataTrigger Value="True">
-                        <DataTrigger.Binding>
-                            <Binding Path="Images.Count"
-                                     Converter="{StaticResource GreaterThanConverter}">
-                                <Binding.ConverterParameter>
-                                    <sys:Int32>1</sys:Int32>
-                                </Binding.ConverterParameter>
-                            </Binding>
-                        </DataTrigger.Binding>
+                    <DataTrigger Value="True"
+                                 Binding="{Binding HadMultiple}">
                         <DataTrigger.Setters>
                             <Setter Property="Visibility"
                                     Value="Visible" />
@@ -83,7 +99,15 @@
                    Stretch="{Binding StretchChoice.Stretch}"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
-                   RenderOptions.BitmapScalingMode="{Binding ScaleChoice.Mode}" />
+                   RenderOptions.BitmapScalingMode="{Binding ScaleChoice.Mode}">
+                <Image.LayoutTransform>
+                    <TransformGroup>
+                        <RotateTransform Angle="{Binding CurrentImage.Rotation}" />
+                        <ScaleTransform ScaleX="{Binding CurrentImage.ScaleX}" />
+                        <ScaleTransform ScaleY="{Binding CurrentImage.ScaleY}" />
+                    </TransformGroup>
+                </Image.LayoutTransform>
+            </Image>
             <local:SquareGrid x:Name="SplitGrid"
                               Grid.Row="1"
                               Grid.Column="1"
@@ -96,6 +120,20 @@
                         HorizontalAlignment="Center"
                         Margin="0,10,0,0">
                 <Button Height="40"
+                        Command="{Binding RotateCommand}">
+                    <Button.CommandParameter>
+                        <sys:Single>-90</sys:Single>
+                    </Button.CommandParameter>
+                    <Path Data="{StaticResource RotateIcon}"
+                          Fill="Black"
+                          Stretch="Uniform">
+                        <Path.LayoutTransform>
+                            <ScaleTransform ScaleX="-1.0" />
+                        </Path.LayoutTransform>
+                    </Path>
+                </Button>
+                <Button Margin="10,0,0,0"
+                        Height="40"
                         Command="{Binding RotateCommand}">
                     <Button.CommandParameter>
                         <sys:Single>90</sys:Single>
@@ -142,12 +180,9 @@
                                       Width="60"
                                       Height="31" />
                 </StackPanel>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        Margin="0,5,0,5">
                 <StackPanel Margin="0,3,10,0">
-                    <TextBlock Text="Scaling:" />
+                    <TextBlock Text="Scaling:"
+                               HorizontalAlignment="Center" />
                     <ComboBox ItemsSource="{Binding ScaleOptions}"
                               SelectedItem="{Binding ScaleChoice}"
                               DisplayMemberPath="Name"
@@ -155,8 +190,9 @@
                               Padding="5"
                               VerticalContentAlignment="Center" />
                 </StackPanel>
-                <StackPanel Margin="0,3,10,0">
-                    <TextBlock Text="Fill:" />
+                <StackPanel Margin="0,3,0,0">
+                    <TextBlock Text="Fill:"
+                               HorizontalAlignment="Center" />
                     <ComboBox ItemsSource="{Binding StretchOptions}"
                               SelectedItem="{Binding StretchChoice}"
                               DisplayMemberPath="Name"
@@ -179,24 +215,29 @@
                         HorizontalAlignment="Center"
                         Margin="0,5,0,10">
                 <Button Content="Confirm"
-                        Padding="5" />
+                        Padding="5"
+                        Command="{Binding ConfirmCommand}" />
                 <Button Content="Discard"
                         Padding="5"
-                        Margin="10,0,0,0" />
+                        Margin="10,0,0,0"
+                        Command="{Binding DiscardCommand}" />
                 <Button Content="Confirm All"
                         Padding="5"
                         Margin="10,0,0,0"
+                        Command="{Binding ConfirmAllCommand}"
                         Style="{StaticResource VisibleWhenMultiple}" />
                 <Button Content="Discard All"
                         Padding="5"
                         Margin="10,0,0,0"
+                        Command="{Binding DiscardAllCommand}"
                         Style="{StaticResource VisibleWhenMultiple}" />
             </StackPanel>
             <ScrollViewer VerticalScrollBarVisibility="Hidden"
                           HorizontalScrollBarVisibility="Auto"
                           Background="DarkGray"
                           Style="{StaticResource VisibleWhenMultiple}">
-                <ItemsControl ItemsSource="{Binding Images}">
+                <ItemsControl x:Name="NavigationBar"
+                              ItemsSource="{Binding Images}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border BorderBrush="LightGreen"
@@ -214,9 +255,9 @@
                                             <DataTrigger Value="False">
                                                 <DataTrigger.Binding>
                                                     <MultiBinding Converter="{StaticResource EqualityConverter}">
-                                                        <Binding Path="DataContext.CurrentImage.Image"
+                                                        <Binding Path="DataContext.CurrentImage"
                                                                  RelativeSource="{RelativeSource AncestorType=Window}" />
-                                                        <Binding Path="Image" />
+                                                        <Binding />
                                                     </MultiBinding>
                                                 </DataTrigger.Binding>
                                                 <DataTrigger.Setters>
@@ -232,7 +273,16 @@
                                         Background="LightGray"
                                         Height="64"
                                         Width="64">
-                                    <Image Source="{Binding Source}" />
+                                    <Image Source="{Binding Source}"
+                                           RenderOptions.BitmapScalingMode="HighQuality">
+                                        <Image.LayoutTransform>
+                                            <TransformGroup>
+                                                <RotateTransform Angle="{Binding Rotation}" />
+                                                <ScaleTransform ScaleX="{Binding ScaleX}" />
+                                                <ScaleTransform ScaleY="{Binding ScaleY}" />
+                                            </TransformGroup>
+                                        </Image.LayoutTransform>
+                                    </Image>
                                 </Border>
                             </Border>
                         </DataTemplate>
