--- a/ImageMap4/MainWindow.xaml
+++ b/ImageMap4/MainWindow.xaml
@@ -63,8 +63,21 @@
                         <Image Source="{StaticResource MapBackground}"
                                RenderOptions.BitmapScalingMode="NearestNeighbor"
                                Margin="1" />
-                        <Image Source="{Binding Path=IconPath}"
-                               RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                        <Image RenderOptions.BitmapScalingMode="NearestNeighbor">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Source"
+                                            Value="{Binding Data.ImageSource}" />
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver"
+                                                 Value="True">
+                                            <Setter Property="Source"
+                                                    Value="{Binding Data.OriginalSource}" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Grid>
                     <TextBlock Text="{Binding ID, StringFormat=map_{0}}"
                                Foreground="Black"
