--- a/ImageMap4/ImportWindow.xaml
+++ b/ImageMap4/ImportWindow.xaml
@@ -205,11 +205,16 @@
                         HorizontalAlignment="Center"
                         Margin="0,5,0,5"
                         Style="{StaticResource VisibleWhenJava}">
-                <ComboBox Width="160"
-                          Padding="5" />
-                <CheckBox Content="Dithering"
-                          Padding="5"
-                          VerticalContentAlignment="Center" />
+                <StackPanel>
+                    <TextBlock Text="Dithering:"
+                               HorizontalAlignment="Center" />
+                    <ComboBox ItemsSource="{Binding DitherOptions}"
+                              SelectedItem="{Binding DitherChoice}"
+                              DisplayMemberPath="Name"
+                              Width="140"
+                              Padding="5"
+                              VerticalContentAlignment="Center" />
+                </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
                         HorizontalAlignment="Center"
