--- a/ImageMap4/MainWindow.xaml
+++ b/ImageMap4/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ImageMap4.MainWindow"
+<Window x:Class="ImageMap4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -188,10 +188,14 @@
                             Grid.Row="0"
                             Margin="5">
                     <TextBlock Text="{Binding ExistingMaps.Count, StringFormat=In World – {0} maps}" />
-                    <CheckBox Content="Show Empty Maps"
-                              IsChecked="{Binding ShowEmptyMaps}"
-                              FontSize="16"
-                              VerticalContentAlignment="Center" />
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox Content="Show Empty Maps"
+                                  IsChecked="{Binding ShowEmptyMaps}"
+                                  FontSize="16"
+                                  VerticalContentAlignment="Center" />
+                        <Button Content="Generate Structure"
+                                Click="GenerateStructureButton_Click"/>
+                    </StackPanel>
                 </StackPanel>
                 <ScrollViewer Grid.Column="1"
                               Grid.Row="1">
