Structure window first steps

--- a/ImageMap4/ImportWindow.xaml
+++ b/ImageMap4/ImportWindow.xaml
@@ -41,6 +41,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Shared.xaml" />
                 <ResourceDictionary Source="Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <local:EqualityConverter x:Key="EqualityConverter" />
