--- a/ImageMap4/MainWindow.xaml
+++ b/ImageMap4/MainWindow.xaml
@@ -15,8 +15,9 @@
     </Window.DataContext>
     <Window.Resources>
         <ResourceDictionary>
-            <BitmapImage x:Key="MapBackground"
-                         UriSource="../Icons/item_frame.png" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Shared.xaml" />
+            </ResourceDictionary.MergedDictionaries>
             <Style x:Key="WorldCard"
                    TargetType="ListViewItem">
                 <Style.Triggers>
@@ -55,55 +56,6 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            <DataTemplate x:Key="MapCard">
-                <StackPanel Margin="3"
-                            Width="128"
-                            Background="#DDDDDD">
-                    <StackPanel.Style>
-                        <Style TargetType="StackPanel">
-                            <Setter Property="Visibility"
-                                    Value="Visible" />
-                            <Style.Triggers>
-                                <MultiDataTrigger>
-                                    <MultiDataTrigger.Conditions>
-                                        <Condition Binding="{Binding Data.IsEmpty}"
-                                                   Value="True" />
-                                        <Condition Binding="{Binding DataContext.ShowEmptyMaps, RelativeSource={RelativeSource AncestorType=Window}}"
-                                                   Value="False" />
-                                    </MultiDataTrigger.Conditions>
-                                    <Setter Property="Visibility"
-                                            Value="Collapsed" />
-                                </MultiDataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </StackPanel.Style>
-                    <Grid>
-                        <Image Source="{StaticResource MapBackground}"
-                               RenderOptions.BitmapScalingMode="NearestNeighbor"
-                               Margin="1" />
-                        <Image RenderOptions.BitmapScalingMode="NearestNeighbor">
-                            <Image.Style>
-                                <Style TargetType="Image">
-                                    <Setter Property="Source"
-                                            Value="{Binding Data.ImageSource}" />
-                                    <Style.Triggers>
-                                        <Trigger Property="IsMouseOver"
-                                                 Value="True">
-                                            <Setter Property="Source"
-                                                    Value="{Binding Data.OriginalSource}" />
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Image.Style>
-                        </Image>
-                    </Grid>
-                    <TextBlock Text="{Binding ID, StringFormat=map_{0}}"
-                               Foreground="Black"
-                               FontWeight="Medium"
-                               FontSize="13"
-                               Margin="4,0,0,4" />
-                </StackPanel>
-            </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
     <TabControl>
@@ -194,7 +146,7 @@
                                   FontSize="16"
                                   VerticalContentAlignment="Center" />
                         <Button Content="Generate Structure"
-                                Click="GenerateStructureButton_Click"/>
+                                Click="GenerateStructureButton_Click" />
                     </StackPanel>
                 </StackPanel>
                 <ScrollViewer Grid.Column="1"
