--- a/ImageMap4/Shared.xaml
+++ b/ImageMap4/Shared.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:ImageMap4">
+    <local:EqualityConverter x:Key="EqualityConverter" />
     <BitmapImage x:Key="MapBackground"
                  UriSource="../Icons/item_frame.png" />
     <DataTemplate x:Key="MapCard">
